gitops/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
  labels:
    name: nginx-app
    istio-injection: enabled
    app.kubernetes.io/name: nginx-app
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
